syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

enum DEVICE {
  DEVICE_UNKNOWN = 0;
  MOBILE = 1;
  WIFI = 2;
  BLUETOOTH = 3;
}

message Status {
  Coordinates loc = 1;
  repeated DEVICE active_detectors = 2;
  double battery_voltage = 3;
  map<int32, int64> detection_count = 4;
}

message DetectionEvent {
  repeated google.protobuf.Timestamp time = 1;
  oneof device_id {
    string wifi_mac = 2;
    string bluetooth_mac = 3;
    string mobile_imei = 4;
  }
}

message Coordinates {
  string name = 1;
  double latitude = 2;
  double longitude = 3;
}

message EventLog {
  string detector_id = 1;
  Coordinates loc = 2;
  repeated DetectionEvent events = 20;
}

message SendStreamResponse {
  int64 mobile = 1;
  int64 bluetooth = 2;
  int64 wifi = 3;
}

service CollectorService {
  rpc Send(EventLog) returns (google.protobuf.Empty);
  rpc SendStream(stream DetectionEvent) returns (SendStreamResponse);
  rpc ReportPosition(Coordinates) returns (google.protobuf.Empty);
  rpc ReportStatus(Status) returns (google.protobuf.Empty);
}
