syntax = "proto3";

package queryserver;

import "google/protobuf/timestamp.proto";

message DetectionEvent {
    repeated google.protobuf.Timestamp time = 1;
    oneof device_id {
        string wifi_mac = 2;
        string bluetooth_mac = 3;
        string mobile_imsi = 4;
    }
}

message Range {
    google.protobuf.Timestamp after = 1;
    google.protobuf.Timestamp before = 2;
}

message GetEventsRequest {
    int64 limit = 1;
    repeated string detector_ids = 2;
    Range range = 3;
}

message GetEventsResponse {
    repeated DetectionEvent events = 1;
}

service QueryService {
    rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);
    rpc GetEventsStream(GetEventsRequest) returns (stream DetectionEvent);
}
